--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,15 @@
 
 <head>
   <meta name="google-site-verification" content="9pMluBZF4KEsJRYYUzdZA8tlCjaE-hWAg68yRuTcIzA" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167434694-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-167434694-1');
+  </script>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
